# MathVista

./: .flake8  .gitignore  README.md  pyproject.toml  requirements.txt  utilities.py
.devcontainer/: Dockerfile  devcontainer.env  devcontainer.json  postCreateCommand.sh
data/: annot_testmini.json  query.json  source.json  testmini.json
data/texts/: captions_bard.json  captions_vitgpt2.json  ocrs_easyocr.json
data_prepro/: generate_caption_bard.py  generate_caption_vitgpt2.py  generate_text_easyocr.py  run_bard.sh
evaluation/: build_query.py  calculate_score.py  extract_answer.py  generate_response.py  generate_response_original.py
jupyter_notebook_demos/: bard_local_demo.ipynb  hugging_face_dataset_demo.ipynb
models/: bard.py  claude.py  gpt.py  gpt_original.py  llava.py
results/: output_testmini_template_for_leaderboard_submission.json
results/bard/: output_bard.json  scores_bard.json
scripts/: run_bard.sh  run_chatgpt.sh  run_chatgpt_2shot_code.sh  run_chatgpt_2shot_code_use_caption_ocr.sh  run_chatgpt_2shot_solution.sh  run_chatgpt_2shot_solution_use_caption_ocr.sh  run_claude.sh  run_claude_2shot_solution.sh  run_claude_2shot_solution_use_caption_ocr.sh  run_gpt4.sh  run_gpt4_2shot_code.sh  run_gpt4_2shot_code_use_caption_ocr.sh  run_gpt4_2shot_solution.sh  run_gpt4_2shot_solution_use_caption_ocr.sh  run_idefics.sh  run_instruct_blip2.sh  run_llama_adapter_v2.sh  run_llava.sh  run_llavar.sh  run_minigpt4.sh  run_mplugowl.sh  run_test_gpt4_2shot_code_use_caption_ocr.sh  run_test_gpt4_2shot_solution_use_caption_ocr.sh  run_test_llava.sh
(+61 files in other folders)
